PortalPackage/ Enrollment Rx Core/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Inquries_per_Presentation__c</fullName>
        <formula>of_Inquries__c  / of_Presentations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Inquries per Presentation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Berkeley_Field__c</fullName>
        <label>Berkeley Field</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HS Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High School</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturation_Rate__c</fullName>
        <formula>of_Inquries__c  /  of_High_School_Srs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saturation Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_of_Students__c</fullName>
        <label>Total # of Students</label>
        <summarizedField>Presentation__c.of_Students_Presented__c</summarizedField>
        <summaryForeignKey>Presentation__c.Booking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_High_School_Srs__c</fullName>
        <formula>High_School__r.of_High_School_Seniors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of High School Srs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Inquries__c</fullName>
        <label># of Inquries</label>
        <summarizedField>Presentation__c.of_Inquries__c</summarizedField>
        <summaryForeignKey>Presentation__c.Booking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Presentations__c</fullName>
        <label># of Presentations</label>
        <summaryForeignKey>Presentation__c.Booking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All_Bookings</fullName>
        <columns>Booking_Date__c</columns>
        <columns>of_High_School_Srs__c</columns>
        <columns>of_Inquries__c</columns>
        <columns>of_Presentations__c</columns>
        <columns>High_School__c</columns>
        <columns>HS_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Bookings</label>
    </listViews>
    <nameField>
        <displayFormat>BN-{00000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>